fix: complete jdk8 mq and web compatibility