@@ -107,7 +107,7 @@ public class PulsarConsumerEndpointRegistrar implements AutoCloseable {
      * 返回已登记的监听器定义（只读视图）。
      */
     public List<MQListenerDefinition> registeredDefinitions() {
-        return List.copyOf(registeredDefinitions);
+        return java.util.Collections.unmodifiableList(new java.util.ArrayList<MQListenerDefinition>(registeredDefinitions));
     }
 
     /**
